Fix BrowserService call on client side